# mirofish

./: README.md  pyproject.toml
backend/: requirements.txt
backend/app/: __init__.py  config.py
backend/app/api/: __init__.py  knowledge.py  life_simulation.py
backend/app/services/: __init__.py  agent_state_store.py  life_event_engine.py  multipath_simulator.py  oasis_profile_generator.py  report_agent.py  simulation_config_generator.py  simulation_manager.py
backend/app/utils/: llm_client.py
backend/preset_knowledge/_meta/: index.json
backend/scripts/: run_reddit_simulation.py  run_twitter_simulation.py
cc_layer/app/: __init__.py  config.py
cc_layer/app/models/: __init__.py  life_simulator.py  project.py  task.py
cc_layer/app/services/: __init__.py  agent_state_store.py  blocker_engine.py  external_data_fetcher.py  graph_builder.py  knowledge_curator.py  knowledge_loader.py  life_event_engine.py  life_simulation_loop.py  multipath_simulator.py  oasis_profile_generator.py  ontology_generator.py  persona_renderer.py  simulation_config_generator.py  text_processor.py  zep_entity_reader.py  zep_graph_memory_updater.py  zep_tools.py
cc_layer/cli/: __init__.py  cli_ui.py  compensation_fetch.py  external_search.py  graph_build.py  knowledge_curate.py  knowledge_search.py  multipath_run.py  ontology_generate.py  profile_generate.py  sim_config_generate.py  sim_init.py  sim_tick.py  text_process.py  zep_search.py  zep_write.py
cc_layer/tests/: test_cli_pipeline.py  test_pipeline_e2e.py
docs/images/: capture_report.py  pipeline_sequence.puml
(+143 files in other folders)
