[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mirofish"
version = "0.1.0"
description = "AI Career Simulator powered by AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
zep = ["zep-cloud>=2.0"]
search = ["tavily-python>=0.3"]
otel = ["opentelemetry-sdk", "opentelemetry-exporter-otlp-proto-grpc"]
cli = ["rich>=13.0"]
all = ["mirofish[zep,search,otel,cli]"]

[tool.hatch.build.targets.wheel]
packages = ["cc_layer"]

[tool.pytest.ini_options]
testpaths = ["cc_layer/tests"]
